Arreglos en los meta description, keywords y author

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
     <meta name="description" content="En Reset Store encontrarás calzados de muy buena calidad. Trabajamos con zapatos cómodos para el día a día, para deporte, etc. ¡Visitá nuestra página y enterate de las nuevas tendencias!">
 
+    <meta name="keywords" content="calzado importado uruguay, calzados de marca, zapatos de calidad premium, calzados cómodos, calzado online, zapatos exclusivos">
+
+    <meta name="author" content="Reset Store">
+
 </head>
 
 <body>
