--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,6 +30,12 @@
 
     <title> Contáctanos </title>
 
+    <meta name="description" content="¿Tenés alguna pregunta/consulta/duda? Contactanos y nuestro equipo te atenderá con gusto. Envianos un mensaje o llamanos para más información sobre nuestros calzados importados.">
+    
+    <meta name="keywords" content="contacto, atención al cliente, soporte calzado, ayuda, preguntas calzado importado uruguay, servicio al cliente, consulta ventas">
+    
+    <meta name="author" content="Reset Store">
+
 </head>
 
 <body>
