--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -30,6 +30,12 @@
 
     <title> Tienda </title>
 
+    <meta name="description" content="Explora nuestra tienda online de calzados importados. Tenemos una amplia variedad de sneakers/calzados de la mejor calidad para hombre y mujer. Encontrá el estilo que buscás con precios competitivos.">
+    
+    <meta name="keywords" content="tienda de calzado uruguay, calzado premium, compra zapatos online, calzado de importación, zapatos cómodos y elegantes, compra calzado online uruguay">
+    
+    <meta name="author" content="Reset Store">
+
 </head>
 
 <body>
