Mejoras en la interacción y acceso al carrito de compras

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -96,7 +96,9 @@
 
                     <!-- ícono del carrito -->
 
-                        <i id="cart-icon" class="fas fa-shopping-cart"></i>
+                        <a href="../pages/carrito.html">
+                            <i id="cart-icon" class="fas fa-shopping-cart"></i> 
+                        </a>
                         <span id="cart-count"> 0 </span>
                 </div>
 
