--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -103,8 +103,9 @@
                 <div class="cart-icon-container">
 
                     <!-- ícono del carrito -->
-        
-                        <i id="cart-icon" class="fas fa-shopping-cart"></i>
+                        <a href="../pages/carrito.html">
+                            <i id="cart-icon" class="fas fa-shopping-cart"></i> 
+                        </a>
                         <span id="cart-count"> 0 </span>
                 </div>
 
